tests/ui/const-generics/bool_cond.normal.stderr
error[E0277]: the trait bound `ConstOption<usize, { N <= 0 }>: Default` is not satisfied
  --> $DIR/bool_cond.rs:42:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
...
LL |     _a: ConstOption<usize, { N <= 0 }>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ConstOption<usize, { N <= 0 }>`
   |
   = help: the following other types implement trait `Default`:
             ConstOption<T, false>
             ConstOption<T, true>
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ConstOption<usize, { N <= 1 }>: Default` is not satisfied
  --> $DIR/bool_cond.rs:44:5
   |
LL | #[derive(Default)]
   |          ------- in this derive macro expansion
...
LL |     _b: ConstOption<usize, { N <= 1 }>,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `ConstOption<usize, { N <= 1 }>`
   |
   = help: the following other types implement trait `Default`:
             ConstOption<T, false>
             ConstOption<T, true>
   = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
